--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "postinstall": "nuxt prepare",
     "scrape:ac": "node scripts/scrape-air-conditioners.mjs",
     "sync": "node scripts/sync-to-supabase.mjs",
-    "sync:ac": "node scripts/sync-to-supabase.mjs air-conditioner"
+    "sync:ac": "node scripts/sync-to-supabase.mjs air-conditioner",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
     "lucide-vue-next": "^0.468.0",
     "nuxt": "3.12.4",
     "vue": "3.4.38",
@@ -22,7 +26,11 @@
   "devDependencies": {
     "@nuxtjs/sitemap": "^7.5.0",
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitest/coverage-v8": "^2.1.8",
+    "jsdom": "^25.0.1",
     "puppeteer": "^24.34.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.8"
   }
 }
