--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/coverage-v8": "^2.1.8",
     "jsdom": "^25.0.1",
+    "png-to-ico": "^3.0.1",
     "puppeteer": "^24.34.0",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
